REJECT_SYNCED_CREDENTIALS
Signed-off-by: Maximilian Clemens <maximilian.clemens@sit.nrw>