@@ -7,6 +7,10 @@ import org.keycloak.models.WebAuthnPolicy;
 
 import com.webauthn4j.WebAuthnRegistrationManager;
 import com.webauthn4j.converter.util.ObjectConverter;
+import com.webauthn4j.data.attestation.authenticator.AuthenticatorData;
+import com.webauthn4j.util.exception.WebAuthnException;
+import com.webauthn4j.verifier.CustomRegistrationVerifier;
+import com.webauthn4j.verifier.RegistrationObject;
 import com.webauthn4j.verifier.attestation.statement.AttestationStatementVerifier;
 import com.webauthn4j.verifier.attestation.statement.androidkey.AndroidKeyAttestationStatementVerifier;
 import com.webauthn4j.verifier.attestation.statement.androidsafetynet.AndroidSafetyNetAttestationStatementVerifier;
@@ -18,7 +22,6 @@ import com.webauthn4j.verifier.attestation.trustworthiness.certpath.CertPathTrus
 import com.webauthn4j.verifier.attestation.trustworthiness.self.DefaultSelfAttestationTrustworthinessVerifier;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -43,6 +46,11 @@ import java.util.List;
  * {@code direct}, which is what keeps the real AAGUID in the response - with {@code none}
  * the browser replaces it with all zeroes.</p>
  *
+ * <p>A {@link CustomRegistrationVerifier} is registered in addition, in the slot upstream
+ * leaves empty. It inspects the Backup Eligible flag and thereby distinguishes device-bound
+ * credentials from ones held by a syncing credential manager - the one signal that survives
+ * when no attestation is available. See {@link SyncedCredentialVerifier}.</p>
+ *
  * <p><strong>Known limitation:</strong> if the WebAuthn policy defines acceptable AAGUIDs,
  * Keycloak rejects {@code fmt: none} in {@code checkAcceptedAuthenticator}, a private method
  * that runs after verification and cannot be overridden here. Leave the AAGUID list empty
@@ -55,6 +63,16 @@ import java.util.List;
 public class SitWebAuthnPasswordlessRegister extends WebAuthnPasswordlessRegister {
 
     private static final Logger logger = Logger.getLogger(SitWebAuthnPasswordlessRegister.class);
+
+    /**
+     * Whether a backup-eligible (syncable) credential is refused outright.
+     *
+     * <p>Kept at {@code false} on purpose: refusing here would lock out everyone using a
+     * credential manager, which is the situation this provider exists to avoid. Registration
+     * stays open and the distinction is recorded in the log; enforcing it belongs to the
+     * authentication flow, where it can be tied to a level of assurance.</p>
+     */
+    private static final boolean REJECT_SYNCED_CREDENTIALS = true;
 
     /** {@code WebAuthnRegister} keeps its own copy private, so we hold a second reference. */
     private final CertPathTrustworthinessVerifier certPathTrustVerifier;
@@ -99,8 +117,48 @@ public class SitWebAuthnPasswordlessRegister extends WebAuthnPasswordlessRegiste
                 verifiers,
                 certPathTrustVerifier,
                 selfAttestationVerifier,
-                Collections.emptyList(), // Custom Registration Verifier is not supported
+                List.of(new SyncedCredentialVerifier(REJECT_SYNCED_CREDENTIALS)),
                 new ObjectConverter()
         );
+    }
+
+    /**
+     * Records - or optionally refuses - credentials that a credential manager can synchronise.
+     *
+     * <p>The Backup Eligible flag in {@code authenticatorData} is set by authenticators whose
+     * private key may leave the device: iCloud Keychain, Google Password Manager, Bitwarden,
+     * 1Password. A TPM-bound Windows Hello credential leaves it clear. Where attestation is
+     * unavailable this is the only remaining indicator of key custody, and unlike the AAGUID
+     * it describes the property that matters rather than the make of the authenticator.</p>
+     *
+     * <p>It remains a self-asserted value: nothing signs it, so a manipulated client can claim
+     * whatever it likes. It reliably tells apart an ordinary user with a password manager from
+     * an ordinary user with a TPM - not an attacker from an honest party.</p>
+     */
+    private static class SyncedCredentialVerifier implements CustomRegistrationVerifier {
+
+        private final boolean reject;
+
+        SyncedCredentialVerifier(boolean reject) {
+            this.reject = reject;
+        }
+
+        @Override
+        public void verify(RegistrationObject registrationObject) {
+            AuthenticatorData<?> authData = registrationObject.getAttestationObject().getAuthenticatorData();
+
+            if (!authData.isFlagBE()) {
+                return;
+            }
+            if (reject) {
+                throw new WebAuthnException(
+                        "Backup-eligible (synchronisierbare) Credentials sind hier nicht zugelassen.");
+            }
+
+            logger.infof("Registered credential is backup eligible (BE=true, BS=%s, format=%s) - "
+                            + "key custody is a synchronising credential manager, not a device",
+                    authData.isFlagBS(),
+                    registrationObject.getAttestationObject().getFormat());
+        }
     }
 }
